[tool.poetry]
name = "photo-collage"
version = "0.1.0"
description = ""
authors = ["Rinku <shark4rkcoding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pillow-heif = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
